---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_err(stringify! (unclosed_string), \"\\\"hello I am a unclosed string\\\\\")"
---
error: Unclosed string literal.
  ┌─ unclosed_string:1:1
  │
1 │ "hello I am a unclosed string\
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Unclosed string literal.
